Finished the scrolltrigger for the product section without much animations, still need to fix the contrast proble

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -29,6 +29,7 @@ body {
   font-size: 1rem;
   line-height: 1.25;
   background-color: #ece3d1;
+  z-index: -3;
 }
 
 a {
